--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAuXjsrX-B6hWOI_l1vUA3t7tiBO7ugJ7Y&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOURKAYAPI&libraries=places"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
