--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
 
   <!-- cordova.js required for cordova apps (remove if not needed) -->
   <script src="cordova.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=YOURKAYAPI&libraries=places"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=YOURKEYAPI&libraries=places"></script>
 
   <!-- un-comment this code to enable service worker
   <script>
